# embedding-api

./: .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml  test.http
.github/workflows/: ci.yml
app/: handler.py  main.py  settings.py
app/repository/: pgvector.py  sentence_transformer.py
app/router/: embed.py  health.py  hybrid.py
tests/: test_handler.py
tests/it/: test_embed.py  test_hybrid.py
tests/repository/: test_pgvector.py
tests/router/: test_embed.py  test_health.py  test_hybrid.py
